<resources>
    <string name="app_name">Kame Image Viewer</string>

    <string name="title_activity_view_image">Kame Image Viewer</string>
    <string name="button_open_folder">^</string>
    <string name="textView_image_count">%1$s/%2$s</string>
    <string name="button_random_image">R</string>
    <string name="button_slideshow">S</string>
    <string name="button_folder_previous">&lt;</string>
    <string name="button_folder_next">&gt;</string>
    <string name="button_favourite">F</string>
    <string name="button_add_favourite">+</string>
    <string name="button_del_favourite">-</string>


</resources>
